--- a/notebooks/1 - data-acquisition/get-download-links.ipynb
+++ b/notebooks/1 - data-acquisition/get-download-links.ipynb
@@ -96,9 +96,7 @@
    "cell_type": "code",
    "execution_count": 459,
    "id": "moral-korean",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -362,7 +360,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
