add preprocess and scripts

--- a/notebooks/1 - data-acquisition/get-download-links.ipynb
+++ b/notebooks/1 - data-acquisition/get-download-links.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": null,
+   "id": "e6cb144b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## run this if running in colab\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "tamil-payroll",
    "metadata": {},
    "outputs": [],
